# stock_manager

./: .gitignore  Makefile  README.md  download_nasdaq_stocks.py  main.cpp  overview.md  run_tests  stock_manager
include/: batch.h  hash_table.h  menu.h  plot.h  priceEntry.h  stock.h  table_stats.h  tui.h
src/: batch.cpp  hash_table.cpp  menu.cpp  plot.cpp  stock.cpp  table_stats.cpp  tui.cpp
tests/: test_main.cpp
tui/: CMakeLists.txt  tui_ascii.cpp  tui_ncurses.cpp
